hphp/hack/test/typecheck/iface_require_circular.php.exp
File "iface_require_circular.php", line 17, characters 41-43:
Unable to satisfy trait/interface requirement (Typing[4110])
File "iface_require_circular.php", line 12, characters 25-26:
Expected KK
File "iface_require_circular.php", line 17, characters 25-27:
But got Qux
